; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/kvm/extr_emulate.c_kvm_mips_emul_tlbp.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/kvm/extr_emulate.c_kvm_mips_emul_tlbp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, %struct.mips_coproc* }
%struct.mips_coproc = type { i32 }

@.str = private unnamed_addr constant [45 x i8] c"[%#lx] COP0_TLBP (entryhi: %#lx), index: %d\0A\00", align 1
@EMULATE_DONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kvm_mips_emul_tlbp(%struct.kvm_vcpu* %0) #0 {
  %2 = alloca %struct.kvm_vcpu*, align 8
  %3 = alloca %struct.mips_coproc*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %2, align 8
  %7 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %8 = getelementptr inbounds %struct.kvm_vcpu, %struct.kvm_vcpu* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  %10 = load %struct.mips_coproc*, %struct.mips_coproc** %9, align 8
  store %struct.mips_coproc* %10, %struct.mips_coproc** %3, align 8
  %11 = load %struct.mips_coproc*, %struct.mips_coproc** %3, align 8
  %12 = call i64 @kvm_read_c0_guest_entryhi(%struct.mips_coproc* %11)
  store i64 %12, i64* %4, align 8
  %13 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %14 = getelementptr inbounds %struct.kvm_vcpu, %struct.kvm_vcpu* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %5, align 8
  store i32 -1, i32* %6, align 4
  %17 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %2, align 8
  %18 = load i64, i64* %4, align 8
  %19 = call i32 @kvm_mips_guest_tlb_lookup(%struct.kvm_vcpu* %17, i64 %18)
  store i32 %19, i32* %6, align 4
  %20 = load %struct.mips_coproc*, %struct.mips_coproc** %3, align 8
  %21 = load i32, i32* %6, align 4
  %22 = call i32 @kvm_write_c0_guest_index(%struct.mips_coproc* %20, i32 %21)
  %23 = load i64, i64* %5, align 8
  %24 = load i64, i64* %4, align 8
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @kvm_debug(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), i64 %23, i64 %24, i32 %25)
  %27 = load i32, i32* @EMULATE_DONE, align 4
  ret i32 %27
}

declare dso_local i64 @kvm_read_c0_guest_entryhi(%struct.mips_coproc*) #1

declare dso_local i32 @kvm_mips_guest_tlb_lookup(%struct.kvm_vcpu*, i64) #1

declare dso_local i32 @kvm_write_c0_guest_index(%struct.mips_coproc*, i32) #1

declare dso_local i32 @kvm_debug(i8*, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
